--- a/config/database.yml
+++ b/config/database.yml
@@ -81,6 +81,7 @@ test:
 #
 production:
   <<: *default
+  url: <%= ENV["DATABASE_URL"] %>
   database: odin_facebook_production
   username: odin_facebook
   password: <%= ENV["ODIN_FACEBOOK_DATABASE_PASSWORD"] %>
