--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 databases:
   - name: postgres
-  ipAllowList: {}
+  ipAllowList: []
 
 services: 
   - type: web
@@ -9,12 +9,12 @@ services:
     buildCommand: "./bin/render-build.sh"
     startCommand: bundle exec rails s 
     envVars:
-    - key: RAILS_MASTER_KEY
-      sync: false
-    -key:  DATABASE_URL
-        fromDatabase:
-        name: postgres
-        property: connectionString
+         - key: RAILS_MASTER_KEY
+           sync: false
+         - key:  DATABASE_URL
+           fromDatabase:
+              name: postgres
+              property: connectionString
 - type: redis
   name: redis
   ipAllowList: []
